--- a/categorias/hombre.css
+++ b/categorias/hombre.css
@@ -209,6 +209,8 @@ body {
   width: 300px;
   z-index: 1000;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  max-height: 300px; /* Ajusta la altura según sea necesario */
+    overflow-y: auto;
 }
 .cart-single-wraper {
   display: flex;
