--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ body {
     overflow-y: auto;
 }
 
-.btn{
+/* .btn{
     background-color: #171717 !important;
     color: aliceblue !important;
 
-}
+} */
 
 .btn:hover{
     background-color: #333 !important;
